--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
-### pipenv ###
-Pipfile
-Pipfile.lock
-
+### venv ###
+myapp/
 
 ### Django ###
 *.log
