--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ myapp/
 __pycache__/
 local_settings.py
 media
+DiChoHo\shop\migrations\
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
