--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
-   
+
 services:
   db:
+    container_name: db
     image: mysql
     ports:
       - '3306:3306'
@@ -10,6 +11,10 @@ services:
       MYSQL_DATABASE: dichoho
       MYSQL_USER: dichoho
       MYSQL_PASSWORD: dichoho
+    volumes:
+      - ./mysql/data:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d/:ro
+      
   web:
     build: .
     command: bash -c "python DiChoHo/manage.py migrate && python DiChoHo/manage.py runserver 0.0.0.0:8000"
