restrict ip through nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,4 +17,14 @@ server {
     location /static/ {
         alias /code/DiChoHo/templates/static/;
     }
+
+    location ^~ /admin/ {
+        proxy_pass http://dichoho;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        allow 10.81.0.6;
+        deny all;
+    }
 }
