edit readme and env example

--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@ ALLOWED_HOSTS=127.0.0.1,localhost
 SECRET_KEY=your-django-secret-key
 DATABASE_NAME=dichoho
 DATABASE_USER=dichoho
-DATABASE_PASSWORD=dichoho
+DATABASE_PASSWORD=x9U4%qkY2tv3Snr#
 DATABASE_HOST=db
 DATABASE_PORT=3306
 EMAIL_USER=your-email
